Fix panning and zooming

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,11 @@
     var clay = new clay.default('board', {
       width: 1000, 
       height: 800,
-      editable: true
+      zoom: 100,
+      editable: true,
+      zoomable: true,
+      colorize: false,
+      exportable: true,
     }, {
       "title": "Demo Board",
       "nodes": [{
