--- a/demo/index.html
+++ b/demo/index.html
@@ -42,7 +42,7 @@
         },
         "attrs": [],
       },{
-        "title":5,
+        "title":"5",
         "description":"",
         "x":88,
         "y":255,
@@ -51,7 +51,7 @@
         },
         "attrs": [],
       },{
-        "title":6,
+        "title":"6",
         "description":"",
         "x":89,
         "y":317,
@@ -77,18 +77,18 @@
       "links":[{
         "dotted": false,
         "editable": true,
-        "input_index": " 1",
+        "input_index": 1,
         "mode": "elbow",
-        "output_index": "1",
+        "output_index": 1,
         "src": 2,
         "target": 4,
         "type": "regular",
       }, {
         "dotted": false,
         "editable": true,
-        "input_index": "2",
+        "input_index": 2,
         "mode": "elbow",
-        "output_index": "1",
+        "output_index": 1,
         "src": 3,
         "target": 4,
         "type": "regular"
