Migrate to typescript

--- a/demo/index.html
+++ b/demo/index.html
@@ -28,47 +28,40 @@
         "description": "", 
         "x":50,
         "y":50,
-        "node": {
-          "type": "string",
-        },
+        "inputs": [],
+        "outputs": ["string"],
         "attrs": []
       }, {
         "title": "Goal",
         "description":"",
         "x":150,
         "y":150,
-        "node": {
-          "type": "string",
-        },
+        "inputs": [],
+        "outputs": ["string"],
         "attrs": [],
       },{
         "title":"5",
         "description":"",
         "x":88,
         "y":255,
-        "node": {
-          "type": "integer",
-        },
+        "inputs": [],
+        "outputs": ["integer"],
         "attrs": [],
       },{
         "title":"6",
         "description":"",
         "x":89,
         "y":317,
-        "node": {
-          "type": "integer",
-        },
+        "inputs": [],
+        "outputs": ["integer"],
         "attrs": [],
       },{
         "title":"Add",
         "description":"",
         "x":236,
         "y":279,
-        "node": {
-          "type": "function",
-          "inputs": ["integer", "integer"],
-          "outputs": ["integer"],
-        },
+        "inputs": ["integer", "integer"],
+        "outputs": ["integer"],
         "attrs": [{
           "name": "hi",
           "value": "123",
