--- a/demo/index.html
+++ b/demo/index.html
@@ -109,8 +109,14 @@
       exportable: true,
     }, {
       "title": "Demo Board",
+      "docks": [{
+        "x": 55, 
+        "y": 55, 
+        "title": "To-Do",
+        "nodes": [0],
+      }],
       "nodes": [{
-        "title": "Hello World 123 123",
+        "title": "Hello World hello world",
         "description": "", 
         "x":50,
         "y":50,
