--- a/demo/index.html
+++ b/demo/index.html
@@ -19,10 +19,19 @@
       p+p {
         margin-top: 5px;
       }
+      .row {
+        display: table-row;
+        width: 100%;
+        color: #484848;
+      }
+      .row + .row > .cell {
+        margin-top: 25px;
+      }
       .cell {
         display: table-cell;
         width: 50%;
         color: #484848;
+        vertical-align: top;
       }
 
       pre {
@@ -41,65 +50,128 @@
         display: block;
         word-wrap: break-word;
       }
+      img + img {
+        margin-top: 10px;
+      }
+      .cell + .cell {
+        padding-left: 15px;
+      }
     </style>
   </head>
   <body>
-    <div class="cell">
-      <h1>What is ClayJS?</h1>
-      <p>
-        It is a developer's take on flow chart. The chart can be built by a person and exported to be saved as config.
-        It was started for a personal project of web-based parametric modelling where each node represent a function.
-        Let's learn what can it do?
-        <br/><br/>
-        <table>
-          <tr>
-            <td><svg viewBox="0 0 24 24" width="40" height="40"><g><g><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/></g></g></svg></td>
-            <td>DISCLAMER: ClayJS is still undergoing major revamp in each version. Thus, current state may not support its original intent.</td>
-          </tr>
-        </table>
-
-        <ul>
-          <li>
-            <h4><strong>Create Nodes and Link them up via GUI</strong></h4>
-            <p>Click on the icon <svg viewBox="0 0 490 490" width="18" height="18"><g><g><path d="M437.333,21.333h-384C23.936,21.333,0,45.269,0,74.667V416c0,29.397,23.936,53.333,53.333,53.333h384 c29.397,0,53.333-23.936,53.333-53.333V74.667C490.667,45.269,466.731,21.333,437.333,21.333z M469.333,416 c0,17.643-14.357,32-32,32h-384c-17.643,0-32-14.357-32-32V128h448V416z M469.333,106.667h-448v-32c0-17.643,14.357-32,32-32h384 c17.643,0,32,14.357,32,32V106.667z"/></g></g><g><g><circle cx="53.333" cy="74.667" r="10.667"/></g></g><g><g><circle cx="96" cy="74.667" r="10.667"/></g></g><g><g><circle cx="138.667" cy="74.667" r="10.667"/></g></g><g><g><path d="M394.667,320H384v-32c0-5.888-4.779-10.667-10.667-10.667H256V256h10.667c5.888,0,10.667-4.779,10.667-10.667v-42.667 c0-5.888-4.779-10.667-10.667-10.667H224c-5.888,0-10.667,4.779-10.667,10.667v42.667c0,5.888,4.779,10.667,10.667,10.667h10.667 v21.333H117.333c-5.888,0-10.667,4.779-10.667,10.667v32H96c-5.888,0-10.667,4.779-10.667,10.667v42.667    C85.333,379.221,90.112,384,96,384h42.667c5.888,0,10.667-4.779,10.667-10.667v-42.667c0-5.888-4.779-10.667-10.667-10.667H128 v-21.333h106.667V320H224c-5.888,0-10.667,4.779-10.667,10.667v42.667c0,5.888,4.779,10.667,10.667,10.667h42.667    c5.888,0,10.667-4.779,10.667-10.667v-42.667c0-5.888-4.779-10.667-10.667-10.667H256v-21.333h106.667V320H352 c-5.888,0-10.667,4.779-10.667,10.667v42.667c0,5.888,4.779,10.667,10.667,10.667h42.667c5.888,0,10.667-4.779,10.667-10.667    v-42.667C405.333,324.779,400.555,320,394.667,320z M128,362.667h-21.333v-21.333H128V362.667z M256,362.667h-21.333v-21.333H256 V362.667z M234.667,234.667v-21.333H256v21.333H234.667z M384,362.667h-21.333v-21.333H384V362.667z"/></g></g></svg> to enter into node creation mode.</p>
-            <p>Followed by selecting a location on the board to add node.</p>
-            <p>Click on the icon <svg viewBox="0 0 24 24" width="18" height="18"><g><g><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></g></g></svg> to link the nodes up. </p>
-          </li>
-          <li>
-            <h4><strong>Create Nodes and Link them up via code</strong></h4>
-            <p>hmm...I don't think any use case for this but it is supported.</p>
-          </li>
-          <li>
-            <h4><strong>Export the current State</strong></h4>
-            <p>Register to the export event via code. Upon user clicking of export button <svg enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" width="18" height="18"><path d="m465.016 172.228h-51.668v34.446h34.446v310.011h-344.457v-310.011h34.446v-34.446h-51.669c-9.52 0-17.223 7.703-17.223 17.223v344.456c0 9.52 7.703 17.223 17.223 17.223h378.902c9.52 0 17.223-7.703 17.223-17.223v-344.456c0-9.52-7.703-17.223-17.223-17.223z"/><path d="m258.342 65.931v244.08h34.446v-244.08l73.937 73.937 24.354-24.354-115.514-115.514-115.514 115.514 24.354 24.354z"/></svg>, callback will be triggered with the current state.</p>
-            <pre>
-  let clay = new Clay(...);
-  clay.subscribe('export', function(json) {
-    console.log(json);
-  });
-  let state = clay.export();  //returns state
-            </pre>
-          </li>
-          <li>
-            <h4><strong>Import previous State</strong></h4>
-            <p>Create the board using previous state or reload different states via code.</p>
-            <pre>
-  let clay = new Clay('id', config, State);
-  clay.load(config2, State2);
-  clay.loadState(State3);
-            </pre>
-          </li>
-        </ul>
-
-      </p>
+    <div class="row">
+      <div class="cell">
+        <h1>What is ClayJS?</h1>
+        <p>
+          It is a developer's take on flow chart. The chart can be built by a person and exported to be saved as config.
+          It was started for a personal project of web-based parametric modelling where each node represent a function.
+          Let's learn what can it do?
+          <br/><br/>
+          <table>
+            <tr>
+              <td><svg viewBox="0 0 24 24" width="40" height="40"><g><g><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/></g></g></svg></td>
+              <td>DISCLAMER: ClayJS is still undergoing major revamp in each version. Thus, current state may not support its original intent.</td>
+            </tr>
+          </table>
+        </p>
+      </div>
     </div>
-    <div class="cell">
-      <div id="board"></div>
+    <div class="row">
+      <div class="cell">
+        <p>
+          <ul>
+            <li>
+              <h4><strong>Create Nodes and Link them up via GUI</strong></h4>
+              <p>Click on the icon <svg viewBox="0 0 490 490" width="18" height="18"><g><g><path d="M437.333,21.333h-384C23.936,21.333,0,45.269,0,74.667V416c0,29.397,23.936,53.333,53.333,53.333h384 c29.397,0,53.333-23.936,53.333-53.333V74.667C490.667,45.269,466.731,21.333,437.333,21.333z M469.333,416 c0,17.643-14.357,32-32,32h-384c-17.643,0-32-14.357-32-32V128h448V416z M469.333,106.667h-448v-32c0-17.643,14.357-32,32-32h384 c17.643,0,32,14.357,32,32V106.667z"/></g></g><g><g><circle cx="53.333" cy="74.667" r="10.667"/></g></g><g><g><circle cx="96" cy="74.667" r="10.667"/></g></g><g><g><circle cx="138.667" cy="74.667" r="10.667"/></g></g><g><g><path d="M394.667,320H384v-32c0-5.888-4.779-10.667-10.667-10.667H256V256h10.667c5.888,0,10.667-4.779,10.667-10.667v-42.667 c0-5.888-4.779-10.667-10.667-10.667H224c-5.888,0-10.667,4.779-10.667,10.667v42.667c0,5.888,4.779,10.667,10.667,10.667h10.667 v21.333H117.333c-5.888,0-10.667,4.779-10.667,10.667v32H96c-5.888,0-10.667,4.779-10.667,10.667v42.667    C85.333,379.221,90.112,384,96,384h42.667c5.888,0,10.667-4.779,10.667-10.667v-42.667c0-5.888-4.779-10.667-10.667-10.667H128 v-21.333h106.667V320H224c-5.888,0-10.667,4.779-10.667,10.667v42.667c0,5.888,4.779,10.667,10.667,10.667h42.667    c5.888,0,10.667-4.779,10.667-10.667v-42.667c0-5.888-4.779-10.667-10.667-10.667H256v-21.333h106.667V320H352 c-5.888,0-10.667,4.779-10.667,10.667v42.667c0,5.888,4.779,10.667,10.667,10.667h42.667c5.888,0,10.667-4.779,10.667-10.667    v-42.667C405.333,324.779,400.555,320,394.667,320z M128,362.667h-21.333v-21.333H128V362.667z M256,362.667h-21.333v-21.333H256 V362.667z M234.667,234.667v-21.333H256v21.333H234.667z M384,362.667h-21.333v-21.333H384V362.667z"/></g></g></svg> to enter into Node creation mode.</p>
+              <p>Followed by selecting a location on the board to add Node.</p>
+              <p>Click on the icon <svg viewBox="0 0 24 24" width="18" height="18"><g><g><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></g></g></svg> to Link the Nodes up. </p>
+            </li>
+          </ul>
+        </p>
+      </div>
+      <div class="cell">
+        <img src="gifs/node-create.gif" />
+        <img src="gifs/link-create.gif" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="cell">
+        <p>
+          <ul>
+            <li>
+              <h4><strong>Create Nodes and Link them up via code</strong></h4>
+              <p>Let me think of a good use case of how this would be used.</p>
+            </li>
+          </ul>
+        </p>
+      </div>
+      <div class="cell"></div>
+    </div>
+    <div class="row">
+      <div class="cell">
+        <p>
+          <ul>
+            <li>
+              <h4><strong>Create Docks to park Nodes within</strong></h4>
+              <p>Click on the icon <svg viewBox="0 0 24 24" width="18" height="18"><path d="M8 23h8v-2H8v2zm8-21.99L8 1c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V3c0-1.1-.9-1.99-2-1.99zM16 15H8V5h8v10z"></path></svg> to enter into Dock creation mode.</p>
+              <p>Similar to Node creation, select a location on the board to add Dock.</p>
+              <p>Drag and drop Nodes onto Dock to park them in.</p>
+              <p>To remove them from Dock, drag the Node out.</p>
+            </li>
+          </ul>
+        </p>
+      </div>
+      <div class="cell">
+        <img src="gifs/dock-create.gif" />
+        <img src="gifs/dock-in.gif" />
+        <img src="gifs/dock-out.gif" />
+      </div>
+    </div>
+    <div class="row">
+      <div class="cell">
+        <p>
+          <ul>
+            <li>
+              <h4><strong>Export the current State</strong></h4>
+              <p>Register to the export event via code. Upon user clicking of export button <svg enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" width="18" height="18"><path d="m465.016 172.228h-51.668v34.446h34.446v310.011h-344.457v-310.011h34.446v-34.446h-51.669c-9.52 0-17.223 7.703-17.223 17.223v344.456c0 9.52 7.703 17.223 17.223 17.223h378.902c9.52 0 17.223-7.703 17.223-17.223v-344.456c0-9.52-7.703-17.223-17.223-17.223z"/><path d="m258.342 65.931v244.08h34.446v-244.08l73.937 73.937 24.354-24.354-115.514-115.514-115.514 115.514 24.354 24.354z"/></svg>, callback will be triggered with the current state.</p>
+              <pre>
+    let clay = new Clay(...);
+    clay.subscribe('export', function(json) {
+      console.log(json);
+    });
+    let state = clay.export();  //returns state
+              </pre>
+            </li>
+          </ul>
+        </p>
+      </div>
+      <div class="cell"><div id="export"></div></div>
+    </div>
+    <div class="row">
+      <div class="cell">
+        <p>
+          <ul>
+            <li>
+              <h4><strong>Import previous State</strong></h4>
+              <p>Create the board using previous state or reload different states via code.</p>
+              <pre>
+    let clay = new Clay('id', config, State);
+    clay.load(config2, State2);
+    clay.loadState(State3);
+              </pre>
+            </li>
+          </ul>
+        </p>
+      </div>
+      <div class="cell"></div>
+    </div>
+    <div class="row">
+      <div class="cell"><div id="board"></div></div>
     </div>
   </body>
   <script src="../dist/clay.js"></script>
   <script>
-    var clay = new clay.default('board', {
+    var demo = new clay.default('board', {
       width: 700, 
       height: 800,
       zoom: 100,
@@ -132,7 +204,7 @@
         "outputs": ["string"],
         "attrs": [],
       },{
-        "title":"5",
+        "title":"Output",
         "description":"",
         "x":88,
         "y":255,
@@ -180,8 +252,35 @@
       }]
     });
 
-    clay.subscribe('export', function(json) {
-      console.log(json);
+
+    var exportClay = new clay.default('export', {
+      width: 450, 
+      height: 160,
+      zoom: 100,
+      exportable: true,
+      colorize: false,
+    }, {
+      "title": "Demo Board",
+      "docks": [{
+        "x": 55, 
+        "y": 55, 
+        "title": "To-Do",
+        "nodes": [0],
+      }],
+      "nodes": [{
+        "title": "Hello World hello world",
+        "description": "", 
+        "x":50,
+        "y":50,
+        "inputs": [],
+        "outputs": ["string"],
+        "attrs": []
+      }],
+      "links":[]
+    });
+
+    exportClay.subscribe('export', function(json) {
+      alert(JSON.stringify(json));
     });
 
   </script>
